--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
 
 <header>
   <h1>Prénom Nom</h1>
-  <p>Étudiant en Bachelor Informatique • Recherche alternance</p>
+  <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
+  <p> à la rentrée de Septembre 2025</p>
+  <p>Ecole ESGI Aix-en-Provence</p>
   <nav>
     <a href="#about">Profil</a>
     <a href="#skills">Compétences</a>
