--- a/index.html
+++ b/index.html
@@ -80,10 +80,20 @@
 <body>
 
 <header>
-  <h1>Prénom Nom</h1>
-  <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
-  <p> à la rentrée de Septembre 2025</p>
-  <p>Ecole ESGI Aix-en-Provence</p>
+   <div class="grid">
+    <div>
+      <h3>Site personnel</h3>
+      <p>Création d’un site vitrine personnel en HTML/CSS pour présenter mon profil et mes projets.</p>
+    </div>
+    <div>
+      <h1>Prénom Nom</h1>
+      <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
+      <p> à la rentrée de Septembre 2025</p>
+      <p>Ecole ESGI Aix-en-Provence</p>
+    </div>
+  </div>
+</section>
+
   <nav>
     <a href="#about">Profil</a>
     <a href="#skills">Compétences</a>
