--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
 <header>
    <div class="grid">
     <div>
-      <h3>Site personnel</h3>
-      <p>Création d’un site vitrine personnel en HTML/CSS pour présenter mon profil et mes projets.</p>
-    </div>
-    <div>
+      <img src="IMG_4921.jpg">
+     </div>
+    <div color=black>
       <h1>Prénom Nom</h1>
       <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
       <p> à la rentrée de Septembre 2025</p>
