--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
       margin: 0;
       font-size: 2em;
     }
+    img {
+    width: 400px;
+    }
+    @media (max-width: 480px) {
+      img {
+          width: 100%;
+      }
+    }
     nav {
       text-align: center;
       margin-top: 10px;
