--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div>
       <img src="IMG_4921.jpg">
      </div>
-    <div color=black>
+    <div color="black">
       <h1>Prénom Nom</h1>
       <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
       <p> à la rentrée de Septembre 2025</p>
