--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
 <body>
 
 <header>
-   <div class="grid">
-    <div>
-      <img src="IMG_4921.jpg">
-     </div>
-    <div color="black">
-      <h1>Prénom Nom</h1>
-      <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
-      <p> à la rentrée de Septembre 2025</p>
-      <p>Ecole ESGI Aix-en-Provence</p>
-    </div>
+
+  <div>
+    <img src="IMG_4921.jpg">
+   </div>
+  <div>
+    <h1 color="black">Prénom Nom</h1>
+    <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
+    <p> à la rentrée de Septembre 2025</p>
+    <p>Ecole ESGI Aix-en-Provence</p>
   </div>
+
 </section>
 
   <nav>
