--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       color: #333;
     }
     header {
+      max-width: 900px;
       background: #0d6efd;
       color: white;
       padding: 40px 20px;
