--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       max-width: 900px;
       background: #0d6efd;
       color: white;
-      padding: 40px 20px;
       text-align: center;
+      padding: 30px 20px;
+      max-width: 900px;
+      margin: auto;
     }
     header h1 {
       margin: 0;
@@ -96,11 +98,11 @@
     <div>
       <img src="IMG_4921.jpg">
      </div>
-    <div class="pres">
-      <h1>Prénom Nom</h1>
-      <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
-      <p> à la rentrée de Septembre 2025</p>
-      <p>Ecole ESGI Aix-en-Provence</p>
+    <div>
+      <h1 color="#ffffff">Prénom Nom</h1>
+      <p color="#ffffff">Étudiant en Bachelor Informatique en Bachelor 1 </p>
+      <p color="#ffffff"> à la rentrée de Septembre 2025</p>
+      <p color="#ffffff">Ecole ESGI Aix-en-Provence</p>
     </div>
   </div>
 </section>
