--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     <a href="#skills">Compétences</a>
     <a href="#projects">Projets</a>
     <a href="#contact">Contact</a>
-    <a href="cv.pdf" target="_blank">CV version PDF</a>
+    <a href="CV.pdf" target="_blank">CV version PDF</a>
+    <a href="CV.pdf" download="CV">CV Téléchargeable</a>
   </nav>
 </header>
 
