--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     header {
       max-width: 900px;
       background: #0d6efd;
-      color: white;
+      color: black;
       text-align: center;
       padding: 30px 20px;
       max-width: 900px;
