--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     }
     header {
       max-width: 900px;
-      background: #0d6efd;
-      color: black;
+      background: #000000;
+      color: white;
       text-align: center;
       padding: 30px 20px;
       max-width: 900px;
