--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     }
     header {
       max-width: 900px;
-      background: #000000;
-      color: white;
+      background: #D3D3D3;
+      color: black;
       text-align: center;
       padding: 30px 20px;
       max-width: 900px;
