--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      background: #f5f5f5;
+      background: #46474a;
       color: #333;
     }
     header {
