--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     pres {
-      color: black;
+      color: white;
     }
     footer {
       background: #333;
