--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       margin: 0;
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      background: #46474a;
+      background: #ffff;
       color: #333;
     }
     header {
       max-width: 900px;
-      background: #D3D3D3;
+      background: #f5f5f5;
       color: black;
       text-align: center;
       padding: 30px 20px;
