--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       margin: auto;
     }
     h2 {
-      color: #0d6efd;
+      color: #0d5fd9;
       border-bottom: 2px solid #ddd;
       padding-bottom: 5px;
     }
