--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     header {
       max-width: 900px;
-      background: #f5f5f5;
+      background: #0d6efd;
       color: black;
       text-align: center;
       padding: 30px 20px;
