--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     header {
       max-width: 900px;
-      background: #064db8;
+      background: #095cd9;
       color: black;
       text-align: center;
       padding: 30px 20px;
