--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <img src="IMG_4921.jpg">
      </div>
     <div>
-      <h1 color="#000000">Prénom Nom</h1>
+      <h1 color="#000000">Mathys OLLIVIER GEORGE</h1>
       <p color="#000000">Étudiant en Bachelor Informatique en Bachelor 1 </p>
       <p color="#000000"> à la rentrée de Septembre 2025</p>
       <p color="#000000">Ecole ESGI Aix-en-Provence</p>
