--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p><a href="mailto:ton.email@mail.com">ton.email@mail.com</a><br>
-     <a href="https://linkedin.com/in/tonprofil" target="_blank">LinkedIn</a> – <a href="https://github.com/tonprofil" target="_blank">GitHub</a></p>
+  <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a><br>
+     <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">LinkedIn</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
 
 <footer>
