--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
       <img src="IMG_4921.jpg">
      </div>
     <div>
-      <h1 color="#000000">Mathys OLLIVIER GEORGE</h1>
-      <p color="#000000">Étudiant en Bachelor Informatique en Bachelor 1 </p>
-      <p color="#000000"> à la rentrée de Septembre 2025</p>
-      <p color="#000000">Ecole ESGI Aix-en-Provence</p>
+      <h1>Mathys OLLIVIER GEORGE</h1>
+      <p>Étudiant en Bachelor Informatique en Bachelor 1 </p>
+      <p> à la rentrée de Septembre 2025</p>
+      <p>Ecole ESGI Aix-en-Provence</p>
     </div>
   </div>
 </section>
