--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      background: #ffff;
+      background: #626567;
       color: #333;
     }
     header {
@@ -96,7 +96,7 @@
 <header>
    <div class="grid">
     <div>
-      <img src="IMG_4921.jpg">
+      <img src="documents/photo.jpg">
      </div>
     <div>
       <h1>Mathys OLLIVIER GEORGE</h1>
@@ -153,7 +153,7 @@
 <section id="contact">
   <h2>Contact</h2>
   <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a><br>
-     <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">LinkedIn</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
+     <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank"><img src="documents/linkendin.png" width=20></a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
 
 <footer>
