--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      background: #626567;
+      background: #ffffff;
       color: #333;
     }
     header {
@@ -50,6 +50,7 @@
       padding: 30px 20px;
       max-width: 900px;
       margin: auto;
+      background: #626567;
     }
     h2 {
       color: #0d6efd;
@@ -153,7 +154,7 @@
 <section id="contact">
   <h2>Contact</h2>
   <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a><br>
-     <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank"><img src="documents/linkendin.png" width=20></a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
+     <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank"><img src="documents/linkedin.png" width=20></a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
 
 <footer>
