--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       padding: 30px 20px;
       max-width: 900px;
       margin: auto;
-      background: #626567;
+      background: #CCCCCC;
     }
     h2 {
       color: #0d6efd;
