--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       padding: 30px 20px;
       max-width: 900px;
       margin: auto;
-      background: #CCCCCC;
+      
     }
     h2 {
       color: #0d6efd;
@@ -154,7 +154,7 @@
 <section id="contact">
   <h2>Contact</h2>
   <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a><br>
-     <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank"><img src="documents/linkedin.png" width=20></a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
+     <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
 
 <footer>
