--- a/index.html
+++ b/index.html
@@ -127,10 +127,14 @@
 <section id="skills">
   <h2>Compétences</h2>
   <ul>
-    <li>HTML5, CSS3, responsive design</li>
-    <li>Python (bases), JavaScript (débutant)</li>
-    <li>WordPress, GitHub, Google Workspace</li>
-    <li>Notions de base en bases de données (SQL)</li>
+    <div class="grid">
+      <div>
+        <li>HTML5, CSS3, responsive design</li>
+        <li>Python (bases), JavaScript (débutant)</li>
+        <li>WordPress, GitHub, Google Workspace</li>
+        <li>Notions de base en bases de données (SQL)</li>
+      </div>
+    </div>
   </ul>
 </section>
 
