--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       margin-top: 40px;
     }
     a {
-      color: #0d6efd;
+      color: #000000;
     }
     @media (max-width: 600px) {
       header h1 {
@@ -121,8 +121,12 @@
 
 <section id="about">
   <h2>Profil</h2>
-  <p>Étudiant en première année de Bachelor Informatique à [Nom de l'école], je suis passionné par le développement web et les outils numériques. Je recherche une alternance pour mettre en pratique mes compétences et apprendre sur le terrain.</p>
-</section>
+   <div class="grid">
+    <div>
+      <p>Étudiant en première année de Bachelor Informatique à [Nom de l'école], je suis passionné par le développement web et les outils numériques. Je recherche une alternance pour mettre en pratique mes compétences et apprendre sur le terrain.</p>
+    </div>
+   </div>
+  </section>
 
 <section id="skills">
   <h2>Compétences</h2>
@@ -160,8 +164,7 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a><br>
-     <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
+  <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a> - <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
 
 <footer>
