--- a/index.html
+++ b/index.html
@@ -166,7 +166,17 @@
   <h2>Contact</h2>
   <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a> - <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
+<div class="form-box" style="width: 300px; margin: 50px auto; padding: 20px; border: 1px solid #ccc; border-radius: 8px; box-shadow: 2px 2px 10px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
+  <form action="traitement.php" method="POST">
+    <label for="nom">Nom :</label>
+    <input type="text" id="nom" name="nom" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
 
+    <label for="message">Message :</label>
+    <textarea id="message" name="message" rows="4" required style="width: 100%; padding: 10px; margin-bottom: 10px;"></textarea>
+
+    <button type="submit" style="width: 100%; padding: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer;">Envoyer</button>
+  </form>
+</div>
 <footer>
   <p>© 2025 Prénom Nom</p>
 </footer>
