--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <label for="message">Message :</label>
     <textarea id="message" name="message" rows="4" required style="width: 100%; padding: 10px; margin-bottom: 10px;"></textarea>
 
-    <button type="submit" style="width: 100%; padding: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer;">Envoyer</button>
+    <button type="submit" style="width: 100%; padding: 10px; background-color: #095cd9; color: white; border: none; cursor: pointer;">Envoyer</button>
   </form>
 </div>
 <section id="contact">
