--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 </div>
 <div>
 <label for="email">Votre e-mail</label>
-<input type="email" id="email" name="email" placeholder="monadresse@mail.com" required>
+<input type="email" id="email" name="email" placeholder="mathysog13@mail.com" required>
 </div>
 <div>
 <label for="sujet">Quel est le sujet de votre message ?</label>
