--- a/index.html
+++ b/index.html
@@ -166,18 +166,19 @@
   <h2>Contact</h2>
   <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a> - <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
-  <section>
-    <div class="contactez-nous">
+  <section id="contact">
+    <div class="grid">
+      <div>
 <h1>Contactez-nous</h1>
 <p>Un problème, une question, envie de nous envoyer un message d’amour ? N’hésitez pas à utiliser ce formulaire pour prendre contact avec nous !</p>
-<form action="/page-traitement-donnees" method="post">
+<form action="mailto:mathysog13@gmail.com" method="post">
 <div>
 <label for="nom">Votre nom</label>
 <input type="text" id="nom" name="nom" placeholder="Martin" required>
 </div>
 <div>
 <label for="email">Votre e-mail</label>
-<input type="email" id="email" name="email" placeholder="mathysog13@mail.com" required>
+<input type="email" id="email" name="email" placeholder="votre_email@mail.com" required>
 </div>
 <div>
 <label for="sujet">Quel est le sujet de votre message ?</label>
@@ -198,6 +199,7 @@
 </div>
 </form>
 </div>
+    </div>
   </section>
 
 <footer>
