--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
   </div>
 </section>
   
-<section id="exerience">
-  <h2>Projets</h2>
+<section id="experience">
+  <h2>Expériences</h2>
   <div class="grid">
     <div>
       <h3>Programmeur | Nuit du code | Mai 2024</h3>
