--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       <p>Expérience pour le concours de la « Nuit du code » au Lycée du Sacré Cœur à Aix-en-Provence, a l’aide de code python.</p>
     </div>
     <div>
-      <h3>Stagiaire technicien| Espace Nova | 2021 - 2023</h3>
-      <p>Aide à l’installation de décors, lumières et enceinte. De même pour le désinstallation de ces derniers.</p>
+      <h3>Stagiaire technicien | 2021 - 2023</h3>
+      <p>Aide à l’installation de décors, lumières et enceinte. De même pour le désinstallation de ces derniers. A l'Espace Nova à Velaux(13880).</p>
     </div>
   </div>
 </section>
