--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
   <nav>
     <a href="#about">Profil</a>
     <a href="#skills">Compétences</a>
+    <a href="#formation">Formations</a>
     <a href="#experience">Expériences</a>
     <a href="#projects">Projets</a>
     <a href="#contact">Contact</a>
@@ -141,6 +142,24 @@
         <li>Notions de base en bases de données (SQL)</li>
         <li>Langues : Français, Anglais</li>
       </ul>
+    </div>
+  </div>
+</section>
+
+<section id="formation">
+  <h2>Formations</h2>
+  <div class="grid">
+    <div>
+      <p>Inscrit à l’école ESGI pour septembre 2025 en Informatique.</p>
+    </div>
+    <div>
+      <p>BAC Général (NSI et AMC)| 2025| Lycée Sacré Coeur.</p>
+    </div>
+    <div>
+      <p>PSC1 | Février 2024 | Lycée Sacré Coeur.</p>
+    </div>
+    <div>
+      <p>BEPC | Juin 2022 | Collège Roquepertuse.</p>
     </div>
   </div>
 </section>
