--- a/index.html
+++ b/index.html
@@ -110,15 +110,9 @@
 </section>
 
   <nav>
-    <a href="#about">Profil</a>
-    <a href="#skills">Compétences</a>
-    <a href="#formation">Formations</a>
-    <a href="#experience">Expériences</a>
-    <a href="#projects">Projets</a>
+    <a href="#about">Profil</a> - <a href="#skills">Compétences</a> - <a href="#formation">Formations</a> - <a href="#experience">Expériences</a> - <a href="#projects">Projets</a>
     <br>
-    <a href="#contact">Contact</a>
-    <a href="documents/CV.pdf" target="_blank">CV version PDF</a>
-    <a href="documents/CV.pdf" download="CV">CV Téléchargeable</a>
+    <a href="#contact">Contact</a> - <a href="documents/CV.pdf" target="_blank">CV version PDF</a> - <a href="documents/CV.pdf" download="CV">CV Téléchargeable</a>
   </nav>
 </header>
 
