--- a/index.html
+++ b/index.html
@@ -95,8 +95,17 @@
 </head>
 <body>
 
-<header>
-  <h1>Mathys OLLIVIER GEORGE</h1>
+<header> 
+  <div class="grid">
+    <div>
+      <h1>Mathys OLLIVIER GEORGE</h1>
+    </div>
+  </div>
+  <select id="monselect">
+  <option value="valeur1">Valeur 1</option>
+  <option value="valeur2" selected>Valeur 2</option>
+  <option value="valeur3">Valeur 3</option>
+</select>
    <div class="grid">
     <div>
       <img src="documents/photo.jpg">
