--- a/index.html
+++ b/index.html
@@ -101,29 +101,34 @@
       <h1>Mathys OLLIVIER GEORGE</h1>
     </div>
   </div>
-  <select id="monselect">
-  <option value="valeur1">Valeur 1</option>
-  <option value="valeur2" selected>Valeur 2</option>
-  <option value="valeur3">Valeur 3</option>
-</select>
+  
    <div class="grid">
     <div>
       <img src="documents/photo.jpg">
      </div>
     <div>
-      <h1>Mathys OLLIVIER GEORGE</h1>
-      <p>Étudiant en Bachelor 1 Informatique en alternance</p>
-      <p>dès la rentrée de Septembre 2025</p>
-      <p>Ecole ESGI Aix-en-Provence</p>
+      <nav>
+        <a href="#about">Profil</a>
+        <br>
+        <a href="#skills">Compétences</a>
+        <br>
+        <a href="#formation">Formations</a>
+        <br>
+        <a href="#experience">Expériences</a>
+        <br>
+        <a href="#projects">Projets</a>
+        <br>
+        <a href="#contact">Contact</a>
+        <br>
+        <a href="documents/CV.pdf" target="_blank">CV version PDF</a>
+        <br>
+        <a href="documents/CV.pdf" download="CV">CV Téléchargeable</a>
+      </nav>
     </div>
   </div>
 </section>
 
-  <nav>
-    <a href="#about">Profil</a> - <a href="#skills">Compétences</a> - <a href="#formation">Formations</a> - <a href="#experience">Expériences</a> - <a href="#projects">Projets</a>
-    <br>
-    <a href="#contact">Contact</a> - <a href="documents/CV.pdf" target="_blank">CV version PDF</a> - <a href="documents/CV.pdf" download="CV">CV Téléchargeable</a>
-  </nav>
+
 </header>
 
 <section id="about">
