--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       margin-top: 10px;
     }
     nav a {
-      color: white;
+      color: black;
       margin: 0 10px;
       text-decoration: none;
       font-weight: bold;
@@ -101,7 +101,7 @@
       <h1>Mathys OLLIVIER GEORGE</h1>
     </div>
   </div>
-  
+  <br>
    <div class="grid">
     <div>
       <img src="documents/photo.jpg">
