--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <p>Étudiant en première année de Bachelor Informatique à l'école ESGI pour la rentrée de septembre 2025, je suis passionné par le développement web et les outils numériques. 
         Je recherche une alternance pour mettre en pratique mes compétences et apprendre sur le terrain.</p>
       <p>
-        Je suis né en 2007, véhiculé et titulaire d'un permi B.
+        Je suis né en 2007, véhiculé et titulaire d'un permis B.
       </p>
     </div>
    </div>
