--- a/index.html
+++ b/index.html
@@ -198,18 +198,16 @@
     </div>
     <div>
       <h3>Script Python</h3>
-      <p>Script d’automatisation de mails de relance pour un cabinet de kiné.</p>
-    </div>
-    <div>
-      <h3>Mini back-office Notion</h3>
-      <p>Système de suivi de tâches collaboratif avec base Notion + liens automatisés.</p>
+      <p>Script de tri de tableaux.</p>
+      <p>Intégration de fonctions dans un programme.</p>
+      <p>Projet en cours : jeu de type Démineur.</p>
     </div>
   </div>
 </section>
   
 <section id="contact">
   <h2>Contact</h2>
-  <p><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a> - <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
+  <p aligne="center"><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a> - <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
 
 <footer>
