--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
     </div>
     <div>
       <h3>Stagiaire technicien | 2021 - 2023</h3>
-      <p>Aide à l’installation de décors, lumières et enceinte. De même pour le désinstallation de ces derniers. A l'Espace Nova à Velaux(13880).</p>
+      <p>Aide à l’installation de décors, lumières et enceinte. De même pour le désinstallation de ces derniers.
+        <br>
+        Espace Nova à Velaux(13880).</p>
     </div>
   </div>
 </section>
