--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   
 <section id="contact">
   <h2>Contact</h2>
-  <p aligne="center"><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a> - <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
+  <p align="center"><a href="mailto:mathysog13@mail.com">mathysog13@mail.com</a> - <a href="https://www.linkedin.com/in/mathys-ollivier-george-4090bb366/" target="_blank">Linkedin</a> – <a href="https://github.com/Mathysog13" target="_blank">GitHub</a></p>
 </section>
 
 <footer>
